# pizza_project

./: README.md  db.sqlite3  pyproject.toml
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_name.py
core/: settings.py  urls.py
pizza/: admin.py  models.py  views.py
pizza/api/: serializers.py  urls.py  views.py
pizza/migrations/: 0001_initial.py  0002_pizza_description.py
static/js/: script.js
templates/: base.html  index.html  order.html  pricing.html
templates/auth/: signin.html  signup.html
